--- a/docs/.vuepress/theme/styles/index.styl
+++ b/docs/.vuepress/theme/styles/index.styl
@@ -137,8 +137,8 @@ h2
   font-size 1.85rem
   padding-bottom .3rem
   border-bottom 1px solid $borderColor
-  padding-top .25rem!important
-  margin-top 1rem!important
+  padding-top .25rem
+  margin-top 3rem!important
   border-radius 4px 4px 0 0
   // color: #000c17
 
@@ -161,6 +161,9 @@ code, kbd, .line-number
 
 p, ul, ol
   line-height 1.7
+
+p
+  text-indent: 1.8rem
 
 hr
   border 0
