增加字体 编写react16.8 hook

--- a/docs/.vuepress/theme/styles/index.styl
+++ b/docs/.vuepress/theme/styles/index.styl
@@ -10,10 +10,48 @@ html, body
   margin 0
   background-color #fff
 
+@font-face
+  font-family 'drifttype'
+  font-style normal
+  font-weight normal
+  src url(/fonts/drifttype.woff2) format('woff2'),
+          url(/fonts/drifttype.woff) format('woff')
+
+
+@font-face
+  font-family 'drifttype'
+  font-style normal
+  font-weight bold
+  src url(/fonts/drifttype_solid.woff2) format('woff2'),
+          url(/fonts/drifttype_solid.woff) format('woff')
+
+
+@font-face
+  font-family 'Moholy Sans'
+  font-style normal
+  font-weight normal
+  src url(/fonts/MoholySans-Regular.woff2) format('woff2'),
+          url(/fonts/MoholySans-Regular.woff2) format('woff')
+
+
+@font-face
+  font-family 'Moholy Sans'
+  font-style normal
+  font-weight bold
+  src url(/fonts/MoholySans-Bold.woff2) format('woff2'),
+          url(/fonts/MoholySans-Bold.woff2) format('woff')
+
+@font-face
+  font-family 'Moholy Sans'
+  font-style normal
+  font-weight 300
+  src url(/fonts/MoholySans-Light.woff2) format('woff2'),
+          url(/fonts/MoholySans-Light.woff2) format('woff')
+
 body
   // font-family -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif
   // font-family -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji
-  font-family Quicksand,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji
+  font-family Moholy Sans, Quicksand, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji
   -webkit-font-smoothing antialiased
   -moz-osx-font-smoothing grayscale
   font-size 16px
@@ -43,7 +81,7 @@ body
   display none
 
 .sidebar
-  font-size 16px
+  font-size 18px
   background-color #fff
   width $sidebarWidth
   position fixed
@@ -112,8 +150,13 @@ strong
   font-weight bold
   margin: 0 .2em
 
+h1
+  font-family Moholy Sans
+  text-align center
+  margin 5rem auto 2rem!important
+
 h1, h2, h3, h4, h5, h6
-  font-weight 600
+  font-weight 400
   line-height 1.25
 
   {$contentClass}:not(.custom) > &
@@ -139,9 +182,10 @@ h2
   padding-bottom .3rem
   border-bottom 1px solid $borderColor
   padding-top .25rem
-  margin-top 3rem!important
+  margin-top 3rem !important
   border-radius 4px 4px 0 0
-  // color: #000c17
+
+// color: #000c17
 
 h3
   font-size 1.35rem
@@ -158,14 +202,14 @@ a.header-anchor
     text-decoration none
 
 code, kbd, .line-number
-  font-family source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace
+  font-family Monaco, Menlo, source-code-pro, Consolas, "Courier New", monospace
 
 p, ul, ol
   line-height 1.7
 
 .page
- p
-  text-indent: 1.8rem
+  p
+    text-indent: 1.8rem
 
 hr
   border 0
