update useMemo hook infomation

--- a/docs/.vuepress/theme/styles/index.styl
+++ b/docs/.vuepress/theme/styles/index.styl
@@ -133,6 +133,10 @@ ul, ol
 strong
   font-weight bold
   margin: 0 .2em
+  background #5d82a6
+  color: #fff
+  padding 2px 8px
+  border-radius 4px
 
 h1
   font-family Moholy Sans
