--- a/docs/.vuepress/theme/styles/index.styl
+++ b/docs/.vuepress/theme/styles/index.styl
@@ -15,7 +15,7 @@ html, body
   font-style normal
   font-weight normal
   src url(/fonts/MoholySans-Regular.woff2) format('woff2'),
-          url(/fonts/MoholySans-Regular.woff2) format('woff')
+  url(/fonts/MoholySans-Regular.woff2) format('woff')
 
 
 @font-face
@@ -23,14 +23,14 @@ html, body
   font-style normal
   font-weight bold
   src url(/fonts/MoholySans-Bold.woff2) format('woff2'),
-          url(/fonts/MoholySans-Bold.woff2) format('woff')
+  url(/fonts/MoholySans-Bold.woff2) format('woff')
 
 @font-face
   font-family 'Moholy Sans'
   font-style normal
   font-weight 300
   src url(/fonts/MoholySans-Light.woff2) format('woff2'),
-          url(/fonts/MoholySans-Light.woff2) format('woff')
+  url(/fonts/MoholySans-Light.woff2) format('woff')
 
 body
   // font-family -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif
@@ -132,16 +132,18 @@ ul, ol
 
 strong
   font-weight bold
-  margin: 0 .2em
+  margin: 0 .25em
   background #5d82a6
   color: #fff
   padding 2px 4px
-  border-radius 4px
+
+  code
+    color #fff!important
 
 h1
   font-family Moholy Sans
   text-align center
-  margin 5rem auto 2rem!important
+  margin 5rem auto 2.5rem !important
 
 h1, h2, h3, h4, h5, h6
   font-weight 400
@@ -163,20 +165,19 @@ h1, h2, h3, h4, h5, h6
     opacity: 1
 
 h1
-  font-size 2.2rem
+  font-size 2.5rem
 
 h2
-  font-size 1.85rem
+  font-size 1.5rem
   padding-bottom .3rem
   border-bottom 1px solid $borderColor
   padding-top .25rem
   margin-top 3rem !important
-  border-radius 4px 4px 0 0
-
-// color: #000c17
+  font-weight 500
+  //color #000c17
 
 h3
-  font-size 1.35rem
+  font-size 1.4rem
 
 a.header-anchor
   font-size 0.85em
@@ -242,3 +243,7 @@ th, td
       padding-left 0
 
 @require 'mobile.styl'
+
+.search-box input {
+  border-radius 0!important
+}
