--- a/docs/.vuepress/theme/styles/code.styl
+++ b/docs/.vuepress/theme/styles/code.styl
@@ -19,7 +19,7 @@
     padding 1.25rem 1.5rem
     margin 0.85rem 0
     background-color $codeBgColor
-    border-radius 6px
+    //border-radius 6px
     overflow auto
     code
       color #fff
