docs(*): 更新typescript文档及图片

--- a/docs/.vuepress/theme/styles/index.styl
+++ b/docs/.vuepress/theme/styles/index.styl
@@ -118,7 +118,7 @@ kbd
   padding 0 0.15em
 
 blockquote
-  font-size .9rem
+  font-size 1.4rem
   color #999
   border-left .5rem solid #dfe2e5
   margin 0.5rem 0
