--- a/docs/.vuepress/theme/styles/toc.styl
+++ b/docs/.vuepress/theme/styles/toc.styl
@@ -1,3 +1,8 @@
 .table-of-contents
+  position fixed
+  right 0
+  font-size 16px
+  height calc(100vh - 200px)
+  overflow-y auto
   .badge
     vertical-align middle
