--- a/docs/.vuepress/theme/styles/toc.styl
+++ b/docs/.vuepress/theme/styles/toc.styl
@@ -1,8 +1,10 @@
 .table-of-contents
   position fixed
   right 0
+  top 50%
+  transform translateY(-50%)
   font-size 16px
-  height calc(100vh - 200px)
+  height calc(100vh - 400px)
   overflow-y auto
   .badge
     vertical-align middle
